# ifpaclient

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: sweden_tournaments.rs
src/: client.rs  error.rs  lib.rs  serde_util.rs
src/api/: director.rs  mod.rs  other.rs  player.rs  rankings.rs  series.rs  stats.rs  tournament.rs
src/models/: common.rs  director.rs  mod.rs  other.rs  player.rs  rankings.rs  series.rs  stats.rs  tournament.rs
