[package]
name = "ifpaclient"
version = "0.1.0"
edition = "2024"
description = "Async Rust client for the IFPA Pinball API"
license = "MIT"
repository = "https://github.com/sral/ifpaclient"
keywords = ["ifpa", "pinball", "api", "client"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
